src/main/java/com/example/demo/entity/error/RentPriceError.java
package com.example.demo.entity.error;

public enum RentPriceError {
	ID_REQUIRED, RENTPRICE_REQUIRED,  RENTPRICE_ALREADY_EXISTS, RENTPRICE_CONSTRAINT_VIOLATION,RENTPRICE_DATA_INTEGRITY_VIOLATION;
	}


